# Calculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Tests.cpp  main.cpp
include/: Calculator.hpp
src/: CMakeLists.txt  Calculator.cpp  main.cpp
tests/: CMakeLists.txt  Tests.cpp
